--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <title>Productos</title>
 </head>
 <body>
-    <div id="contenedor-principal">
+    <div id="contenedor-principal" class="shadow p-3 mb-5 bg-white rounded">
         <!-- ENCABEZADO -->
         <header id="mi-header">
-            <h1 class="titulos-h1-header">Soy un título 1</h1>
+            <h1 class="titulos-h1-header">RESTAURANTE COMIDA YA!</h1>
             <!-- BARRA DE NAVEGACIÓN (PARTE SUPERIOR PÁGINA) -->
-            <nav>
-                <a href="#" target="_blank">link 1</a> |
-                <a href="#" target="_blank">link 2</a> |
-                <a href="#" target="_blank">link 3</a>
+            <nav class="text-center">
+                <a href="https://twitter.com/" target="_blank">Twitter</a> |
+                <a href="https://bit.institute/" target="_blank">BIT</a> |
+                <a href="#" target="_blank">link a nada</a>
 
                 <ul id="lista-nav">
                     <il class="obj-lista-nav">Prueba barra 1</il>
@@ -32,7 +32,7 @@
         </header>
         <!-- CONTENIDO PRINCIPAL -->
         <main id="mi-main">
-            <h2>Soy un título 2</h2>
+            <h2 class="text-center">MENÚ</h2>
             <!-- SECCIONES -->
             <section class="main-seccion-1">
                 <div class="container text-center">
@@ -71,7 +71,7 @@
                                     alt="Ensalada"
                                     width = "90%"
                                 />
-                                <figcaption>IEnsalada</figcaption>
+                                <figcaption>Ensalada</figcaption>
                             </figure>
                         </div>
 
@@ -118,7 +118,7 @@
 
             <div class="texto-info">
                 <!-- ARTÍCULOS -->
-                <article class="article-texto-info">
+                <article class="text-center article-texto-info">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Saepe repellendus dolore quae recusandae accusamus, omnis
                     totam cumque a distinctio alias veniam, consequatur voluptates
@@ -128,7 +128,7 @@
                     et maiores fuga accusamus ullam exercitationem optio ipsum, rerum quidem?
                 </article>
 
-                <article class="article-texto-info">
+                <article class="text-center article-texto-info">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Saepe repellendus dolore quae recusandae accusamus, omnis
                     totam cumque a distinctio alias veniam, consequatur voluptates
@@ -143,7 +143,7 @@
         </main>
 
         <footer id="mi-footer">
-            <h2>Soy un footer</h2>
+            <h2>Footer</h2>
         </footer>
 
         <!-- CONFIGURACIONES BOOSTRAP -->
